# iWay-schnupper-portfolio

./: .gitignore  README.md  docker-compose.yml  personal.html  style.css
backend/: pyproject.toml
backend/backend/: models.py  settings.py
docker/: Dockerfile  default.conf  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: default.conf
frontend/: calculator.html  general.html  index.html  script.js
todo-app/: pyproject.toml
