[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiffany",email = "tiffanyamber.kaiser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "backend"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
